# RookDB

./: .gitignore  404.html  ARCHITECTURE_OVERVIEW.md  BENCHMARK_REPORT.md  CATALOG_MANAGER_IMPLEMENTATION.md  COLUMN_REORDERING_QUICK_START.md  COLUMN_REORDERING_RESEARCH.md  Cargo.toml  CatalogManager.txt  CatalogManager_Addendum.md  Code Review Report.md  DS_ ImpReport.txt  IMPLEMENTATION.md  OPTIMIZATION_ROADMAP.md  OPTIMIZED_REORDERING_GUIDE.md  OPTIMIZED_REORDERING_SUMMARY.md  PROJECTION_IMPLEMENTATION.md  PROJECTION_QUICK_REFERENCE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_OPTIMIZED.md  README.md  ROOKDB_REPORT.md  RookDB_v3_Presentation.tex  SESSION_TEST_AUDIT.md  Submission2.tex  TEST_REPORT_COMPLETE.md  design-doc.md  features_implemented.md  final_implementation.md  fix_fields.py  free-space-manager.md  generate_charts.py  heap-manager.md  help.html  index.html  indexing_documentation.md  myreadme.md  report.tex  settings.html  sitemap.xml  (+8 more)
.github/: CODEOWNERS  (+1 more)
code/: .gitignore  Cargo.toml
code/database/global/: catalog.json
code/examples/: example2.csv  large.csv
code/src/: buffer.rs  catalog.rs  lib.rs  main.rs  page.rs
code/src/backend/: autovacuum.rs  fsm_manager.rs  instrumentation.rs  layout.rs  mod.rs
code/src/backend/buffer_manager/: buffer_manager.rs  mod.rs
code/src/backend/catalog/: catalog.rs  mod.rs  types.rs
code/src/backend/disk/: disk_manager.rs  mod.rs
code/src/catalog/: catalog.rs  mod.rs
code/src/frontend/: data_cmd.rs  database_cmd.rs  menu.rs  mod.rs  table_cmd.rs
code/tests/: test_compaction.rs  test_delete.rs  test_fsm_large.rs  test_init_catalog.rs  test_init_table.rs  test_load_catalog.rs  test_page_count.rs  test_page_free_space.rs  test_page_lock.rs  test_save_catalog.rs  test_update.rs
(+1121 files in other folders)
