[package]
name = "storage_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.61", features = ["serde"] }
regex = "1"

[[bin]]
name = "test_selection_cli"
path = "0_surjit/test_selection_cli/main.rs"

[[bin]]
name = "selection_benchmark"
path = "0_surjit/0_benchmark_test/main.rs"

# ── Selection Executor test suite (lives entirely in 0_surjit/selection_test/) ─
[[test]]
name = "selection_suite"
path = "0_surjit/selection_test/main.rs"
