[package]
name = "storage_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"

[[bench]]
name = "blob_array_bench"
harness = false
path = "benches/blob_array_bench.rs"

[[bench]]
name = "toast_comparison_bench"
harness = false
path = "benches/toast_comparison_bench.rs"