[package]
name = "storage_manager"
version = "0.1.0"
edition = "2024"
default-run = "storage_manager"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.61", features = ["serde"] }
regex = "1"
