[package]
name = "storage_manager"
version = "0.1.0"
edition = "2024"
default-run = "storage_manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
log = "0.4"
env_logger = "0.10"